# MealsU-be

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  db.rs  main.rs  state.rs
src/routes/: auth.rs  health.rs  mod.rs  users.rs
